2018.4/_sources/plugins/available/feature-table/heatmap.txt
heatmap: Generate a heatmap representation of a feature table
=============================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-table:heatmap.bib
   :all:
   :keyprefix: feature-table:heatmap:
   :labelprefix: feature-table:heatmap:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table heatmap [OPTIONS]

     Generate a heatmap representation of a feature table with optional
     clustering on both the sample and feature axes.

     Tip: To generate a heatmap containing taxonomic annotations, use `qiime
     taxa collapse` to collapse the feature table at the desired taxonomic
     level.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     The feature table to visualize.  [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata.
                                     [optional]
     --m-metadata-column MetadataColumn[Categorical]
                                     Column from metadata file or artifact
                                     viewable as metadata. Annotate the sample
                                     IDs with these metadata values. When
                                     metadata is present and `cluster`='feature',
                                     samples will be sorted by the metadata
                                     values.  [optional]
     --p-normalize / --p-no-normalize
                                     Normalize the feature table by adding a
                                     psuedocount of 1 and then taking the log10
                                     of the table.  [default: True]
     --p-title TEXT                  Optional custom plot title.  [optional]
     --p-metric [mahalanobis|matching|sokalsneath|minkowski|sqeuclidean|cityblock|canberra|russellrao|braycurtis|jaccard|cosine|yule|hamming|dice|kulsinski|euclidean|seuclidean|sokalmichener|chebyshev|correlation|rogerstanimoto]
                                     Metrics exposed by seaborn (see http://seabo
                                     rn.pydata.org/generated/seaborn.clustermap.h
                                     tml#seaborn.clustermap for more detail).
                                     [default: euclidean]
     --p-method [single|centroid|ward|average|complete|median|weighted]
                                     Clustering methods exposed by seaborn (see h
                                     ttp://seaborn.pydata.org/generated/seaborn.c
                                     lustermap.html#seaborn.clustermap for more
                                     detail).  [default: average]
     --p-cluster [features|both|samples]
                                     Specify which axes to cluster.  [default:
                                     both]
     --p-color-scheme [Accent|rocket|Vega20|Purples|PRGn_r|Greys|spring_r|PuBuGn|cool_r|cubehelix|viridis_r|Set1_r|winter_r|Set3_r|gist_gray_r|tab20b|gist_gray|seismic_r|bwr|afmhot|gray_r|Vega10_r|inferno_r|OrRd|YlGn|bwr_r|copper|rainbow|pink|pink_r|gist_heat|gnuplot2_r|cubehelix_r|binary_r|Dark2_r|Wistia_r|BrBG|brg_r|rainbow_r|Paired|gist_yarg_r|Vega20c_r|YlGnBu|tab20_r|plasma|Vega10|vlag_r|PiYG_r|seismic|Spectral_r|GnBu|winter|Set2_r|Greens_r|ocean_r|brg|terrain_r|RdGy|flag|PuRd|Paired_r|spectral_r|RdBu|spectral|PuBu|YlOrBr_r|BuGn|binary|BuPu|RdYlBu_r|Wistia|gist_rainbow_r|hot_r|Pastel1_r|CMRmap|gray|PuRd_r|Accent_r|Set1|bone|PuBuGn_r|RdYlGn|GnBu_r|YlGn_r|RdBu_r|jet|Greens|RdYlGn_r|Blues|YlOrRd_r|Vega20b|Oranges_r|gnuplot|gist_earth|YlOrBr|coolwarm|coolwarm_r|afmhot_r|plasma_r|Set3|Reds_r|PuBu_r|gist_rainbow|BuPu_r|Greys_r|RdPu_r|vlag|Pastel2|inferno|tab10_r|autumn|autumn_r|tab20|Set2|gist_heat_r|gist_yarg|ocean|hsv|nipy_spectral|Oranges|copper_r|gist_stern_r|spring|PRGn|flag_r|hot|RdGy_r|magma|Reds|gist_stern|tab20c_r|gist_earth_r|PuOr_r|nipy_spectral_r|rocket_r|RdYlBu|prism_r|PiYG|Vega20c|icefire_r|summer_r|bone_r|OrRd_r|Pastel2_r|Purples_r|Spectral|gnuplot2|mako|Vega20b_r|magma_r|Dark2|viridis|BuGn_r|icefire|YlGnBu_r|tab10|terrain|tab20c|Pastel1|CMRmap_r|prism|Vega20_r|gist_ncar_r|summer|RdPu|gist_ncar|hsv_r|cool|mako_r|tab20b_r|PuOr|jet_r|BrBG_r|gnuplot_r|YlOrRd|Blues_r]
                                     The matplotlib colorscheme to generate the
                                     heatmap with.  [default: rocket]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Generate a heatmap representation of a feature table

   Generate a heatmap representation of a feature table with optional
   clustering on both the sample and feature axes.  Tip: To generate a heatmap
   containing taxonomic annotations, use `qiime taxa collapse` to collapse the
   feature table at the desired taxonomic level.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table to visualize.
   metadata : MetadataColumn[Categorical], optional
       Annotate the sample IDs with these metadata values. When metadata is
       present and `cluster`='feature', samples will be sorted by the metadata
       values.
   normalize : Bool, optional
       Normalize the feature table by adding a psuedocount of 1 and then
       taking the log10 of the table.
   title : Str, optional
       Optional custom plot title.
   metric : Str % Choices({'braycurtis', 'canberra', 'chebyshev', 'cityblock', 'correlation', 'cosine', 'dice', 'euclidean', 'hamming', 'jaccard', 'kulsinski', 'mahalanobis', 'matching', 'minkowski', 'rogerstanimoto', 'russellrao', 'seuclidean', 'sokalmichener', 'sokalsneath', 'sqeuclidean', 'yule'}), optional
       Metrics exposed by seaborn (see http://seaborn.pydata.org/generated/sea
       born.clustermap.html#seaborn.clustermap for more detail).
   method : Str % Choices({'average', 'centroid', 'complete', 'median', 'single', 'ward', 'weighted'}), optional
       Clustering methods exposed by seaborn (see http://seaborn.pydata.org/ge
       nerated/seaborn.clustermap.html#seaborn.clustermap for more detail).
   cluster : Str % Choices({'both', 'features', 'samples'}), optional
       Specify which axes to cluster.
   color_scheme : Str % Choices({'Accent', 'Accent_r', 'Blues', 'Blues_r', 'BrBG', 'BrBG_r', 'BuGn', 'BuGn_r', 'BuPu', 'BuPu_r', 'CMRmap', 'CMRmap_r', 'Dark2', 'Dark2_r', 'GnBu', 'GnBu_r', 'Greens', 'Greens_r', 'Greys', 'Greys_r', 'OrRd', 'OrRd_r', 'Oranges', 'Oranges_r', 'PRGn', 'PRGn_r', 'Paired', 'Paired_r', 'Pastel1', 'Pastel1_r', 'Pastel2', 'Pastel2_r', 'PiYG', 'PiYG_r', 'PuBu', 'PuBuGn', 'PuBuGn_r', 'PuBu_r', 'PuOr', 'PuOr_r', 'PuRd', 'PuRd_r', 'Purples', 'Purples_r', 'RdBu', 'RdBu_r', 'RdGy', 'RdGy_r', 'RdPu', 'RdPu_r', 'RdYlBu', 'RdYlBu_r', 'RdYlGn', 'RdYlGn_r', 'Reds', 'Reds_r', 'Set1', 'Set1_r', 'Set2', 'Set2_r', 'Set3', 'Set3_r', 'Spectral', 'Spectral_r', 'Vega10', 'Vega10_r', 'Vega20', 'Vega20_r', 'Vega20b', 'Vega20b_r', 'Vega20c', 'Vega20c_r', 'Wistia', 'Wistia_r', 'YlGn', 'YlGnBu', 'YlGnBu_r', 'YlGn_r', 'YlOrBr', 'YlOrBr_r', 'YlOrRd', 'YlOrRd_r', 'afmhot', 'afmhot_r', 'autumn', 'autumn_r', 'binary', 'binary_r', 'bone', 'bone_r', 'brg', 'brg_r', 'bwr', 'bwr_r', 'cool', 'cool_r', 'coolwarm', 'coolwarm_r', 'copper', 'copper_r', 'cubehelix', 'cubehelix_r', 'flag', 'flag_r', 'gist_earth', 'gist_earth_r', 'gist_gray', 'gist_gray_r', 'gist_heat', 'gist_heat_r', 'gist_ncar', 'gist_ncar_r', 'gist_rainbow', 'gist_rainbow_r', 'gist_stern', 'gist_stern_r', 'gist_yarg', 'gist_yarg_r', 'gnuplot', 'gnuplot2', 'gnuplot2_r', 'gnuplot_r', 'gray', 'gray_r', 'hot', 'hot_r', 'hsv', 'hsv_r', 'icefire', 'icefire_r', 'inferno', 'inferno_r', 'jet', 'jet_r', 'magma', 'magma_r', 'mako', 'mako_r', 'nipy_spectral', 'nipy_spectral_r', 'ocean', 'ocean_r', 'pink', 'pink_r', 'plasma', 'plasma_r', 'prism', 'prism_r', 'rainbow', 'rainbow_r', 'rocket', 'rocket_r', 'seismic', 'seismic_r', 'spectral', 'spectral_r', 'spring', 'spring_r', 'summer', 'summer_r', 'tab10', 'tab10_r', 'tab20', 'tab20_r', 'tab20b', 'tab20b_r', 'tab20c', 'tab20c_r', 'terrain', 'terrain_r', 'viridis', 'viridis_r', 'vlag', 'vlag_r', 'winter', 'winter_r'}), optional
       The matplotlib colorscheme to generate the heatmap with.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>